# social_site

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  init.sql
migrations/2021-05-06-082235_create_users/: down.sql  up.sql
migrations/2021-05-24-180820_create_rooms/: down.sql  up.sql
public/: index.html  rooms.html  users.html
public/js/: sample.js
src/: main.rs  models.rs  routes.rs  schema.rs
src/models/: room.rs  user.rs
src/routes/: mod.rs  room.rs  user.rs
