[package]
name = "social_site"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_codegen = "*"

diesel = { version = "*", features = ["postgres"] }
dotenv = "*"

r2d2 = "*"
r2d2-diesel = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.rocket_contrib]
version = "*"
default_features = false
features = [ "json", "serve" ]
