[package]
name = "social_site"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.10"

diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"

r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"

[dependencies.rocket_contrib]
version = "0.4.0"
default_features = false
features = [ "json", "serve" ]
